--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -11,14 +11,12 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_OS: "True"
-          SHOW_PROJECTS: "True"
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_EDITORS: "False"
-          SHOW_LANGUAGE_PER_REPO: "True"
-          SHOW_LOC_CHART: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_SHORT_INFO: "False"
+          GH_TOKEN: ${{ secrets.SAMPLE_SECRETS }}
+          SHOW_TITLE: true
+          TIME_RANGE: last_30_days
+          SHOW_TOTAL: true
+          SHOW_TIME: false
+          
